[gd_scene load_steps=30 format=3 uid="uid://bvkquk144ij2p"]

[ext_resource type="Script" uid="uid://cxiytao22s0gg" path="res://scripts/skeleton_enemy.gd" id="1_2eh78"]
[ext_resource type="Texture2D" uid="uid://bhwgt4x6bvcq7" path="res://assets/Skeleton/Sprite Sheets/Skeleton Idle.png" id="1_rv2i1"]
[ext_resource type="Texture2D" uid="uid://bdnh58lbx4a3i" path="res://assets/Skeleton/Sprite Sheets/Skeleton Walk.png" id="3_btgl0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2eh78"]
atlas = ExtResource("1_rv2i1")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_btgl0"]
atlas = ExtResource("1_rv2i1")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekv7b"]
atlas = ExtResource("1_rv2i1")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t2vl"]
atlas = ExtResource("1_rv2i1")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4wr6"]
atlas = ExtResource("1_rv2i1")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps3px"]
atlas = ExtResource("1_rv2i1")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpe3n"]
atlas = ExtResource("1_rv2i1")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_phlhj"]
atlas = ExtResource("1_rv2i1")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fd36"]
atlas = ExtResource("1_rv2i1")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnydi"]
atlas = ExtResource("1_rv2i1")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnc4d"]
atlas = ExtResource("1_rv2i1")
region = Rect2(240, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5opx"]
atlas = ExtResource("3_btgl0")
region = Rect2(0, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_kblv1"]
atlas = ExtResource("3_btgl0")
region = Rect2(22, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7m8m"]
atlas = ExtResource("3_btgl0")
region = Rect2(44, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_xao27"]
atlas = ExtResource("3_btgl0")
region = Rect2(66, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c2p8"]
atlas = ExtResource("3_btgl0")
region = Rect2(88, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua8n7"]
atlas = ExtResource("3_btgl0")
region = Rect2(110, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ehv6"]
atlas = ExtResource("3_btgl0")
region = Rect2(132, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfbk3"]
atlas = ExtResource("3_btgl0")
region = Rect2(154, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_gouej"]
atlas = ExtResource("3_btgl0")
region = Rect2(176, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_olohy"]
atlas = ExtResource("3_btgl0")
region = Rect2(198, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgryi"]
atlas = ExtResource("3_btgl0")
region = Rect2(220, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6att5"]
atlas = ExtResource("3_btgl0")
region = Rect2(242, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeph5"]
atlas = ExtResource("3_btgl0")
region = Rect2(264, 0, 22, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_m5opx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eh78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btgl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekv7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t2vl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4wr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps3px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpe3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phlhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fd36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnydi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnc4d")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5opx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kblv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7m8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xao27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c2p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua8n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ehv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfbk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gouej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olohy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgryi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6att5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeph5")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kblv1"]
radius = 8.0
height = 32.0

[node name="SkeletonEnemy" type="CharacterBody2D"]
script = ExtResource("1_2eh78")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_m5opx")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.926351
offset = Vector2(4, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_kblv1")

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(18, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-19, 0)

[connection signal="timeout" from="DirectionTimer" to="." method="_on_timer_timeout"]
